added about page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
         <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@100;200;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -39,15 +40,16 @@
                 <div class = links>
                     <nav>
                         <a href="index.html">Home</a>
+                        <a href="about.html">About Us</a>
                         <a href="contact.html">Contact Us</a>
                     </nav>
                 </div>  
 
-                <h1>A <mark>Spotify Song Suggester</mark> that helps users find and visualize songs that fit their personal taste.</h1>
-                <p>This app enables users to browse and visualize audio features of over 116k Spotify songs. A user can search for a specific song and see its audio features displayed in a visually appealing way. The app also identifies songs with similar audio features. Users can save their favorite songs to their profile and the app will make suggestions based on the audio features of their favorites. Users can also request suggested songs based on what they are in the mood for. </p>
+                <h1>A <mark>Spotify Song Suggester</mark>that helps users find and visualize songs that fit their personal taste.</h1>
+                <p>This app enables users to browse and visualize audio features of over 116k Spotify songs. The app identifies songs with similar audio features. Users can save their favorite songs to their profile and the app will make suggestions based on the audio features of their favorites. Users can also request suggested songs based on what they are in the mood for. </p>
             <div class = btnParent>
-                    <div class = btn><a href = "https://bw-spotify1-mp.herokuapp.com/login"  target="_blank">LOGIN</a></div>
-                    <div class = btn><a href = "https://bw-spotify1-mp.herokuapp.com/users/createnewuser "  target="_blank">SIGN UP</a></div>
+                    <div class = btn><a href = "https://bw-spotify1.vercel.app/login"  target="_blank">LOGIN</a></div>
+                    <div class = btn><a href = "https://bw-spotify1.vercel.app/signup  "  target="_blank">SIGN UP</a></div>
             </div>
            
 
