--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
                 <div class = links>
                     <nav>
                         <a href="index.html">Home</a>
+                        <a href="about.html">About Us</a>
                         <a href="contact.html">Contact Us</a>
                     </nav>
                 </div>  
